--- a/atribuicao-e-ternario/index.html
+++ b/atribuicao-e-ternario/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Variaveis</title>
+  <title>Atribuicao e Ternario</title>
 </head>
 <body>
+  
   <script src="script.js"></script>
 </body>
 </html>
